# financial-triage-env

./: .env.example  .gitignore  Dockerfile  JUDGES.md  LICENSE  MINI_BLOG.md  Procfile  README.md  ablation_env.json  financial_triage_training.ipynb  fix_ipynb.py  generate_loss_plot.py  heuristic_scores.json  inference.py  models.py  openenv.yaml  pyproject.toml  render.yaml  requirements.txt  sft_dataset.jsonl  stochasticity_report.json  tasks.py  test_reward.py  train.py  training_notebook.py
TRAINING_LOGS/: README.md  training_run.json
scripts/: ablation_env.py  check_openenv.py  eval_heuristic.py  eval_utils.py  inspect_reward.py  paired_scores.py  regenerate_figures.py  train_grpo.py  train_sft.py  verify_stochasticity.py
server/: _env_bootstrap.py  app.py  llm_policy.py  my_env_environment.py  video_demo_server.py
tests/: test_reward_properties.py
video_demo/: index.html
